feat: enhance meal status API call with retry logic and improved error handling; update overview subtitle and recent transactions table styling

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -219,3 +219,27 @@
     @apply bg-accent rounded-xl;
   }
 }
+
+*:focus:not(ol) {
+  @apply border-cyan-400 ring-2 ring-cyan-400 outline-none;
+}
+
+select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  text-indent: 1px;
+  text-overflow: "";
+}
+
+@layer utilities {
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .no-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
+}
